--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -264,6 +264,10 @@
 
 
         @media(max-width:576px) {
+            html{
+                overflow: scroll !important ; 
+            }
+            
             .pc {
                 display: none;
                 height: 100%;
