--- a/EscapeRoom/test/test.html
+++ b/EscapeRoom/test/test.html
@@ -89,18 +89,18 @@
 
 <body>
     <div class="content-block">
-        <!-- <div class="box-container">
+        <div class="box-container">
             <div class="border-top">border top</div>
-        </div> -->
+        </div>
         <div class="box-container">
             <div class="border-left">border left</div>
-        <!-- </div>
+        </div>
         <div class="box-container">
             <div class="border-right">border right</div>
         </div>
         <div class="box-container">
             <div class="border-bottom">border bottom</div>
-        </div> -->
+        </div>
     </div>
 
 
