--- a/EscapeRoom/ES-aboutES.html
+++ b/EscapeRoom/ES-aboutES.html
@@ -85,7 +85,7 @@
             width: 5px;
             background: linear-gradient(#B0B63F 0%, #21210C 100%);
         }
-        .bl:after {
+        /* .bl:after {
             content: '';
             position: absolute;
             bottom: auto;
@@ -94,7 +94,7 @@
             width: 5px;
             background: linear-gradient(#21210C 0%, #B0B63F 100%);
             transform: rotate(90deg);
-        }
+        } */
         
 
 
