--- a/EscapeRoom/ES-theme-police.html
+++ b/EscapeRoom/ES-theme-police.html
@@ -305,6 +305,9 @@
             .boxShadolBot{
                 display: none;
             }
+            .themeBtn{
+                margin-top: 40px;
+            }
 
         }
     </style>
