--- a/EscapeRoom/ES-fee.html
+++ b/EscapeRoom/ES-fee.html
@@ -221,7 +221,7 @@
             <div class="navLogo lg-4 d-flex align-items-center justify-content-center">
                 <img src="img/logo.png" alt="">
                 <b class="logoName"><a href="/EscapeRoom/index.html">許多門</a></b>
-                <p class="gameName"></p><a href="/EscapeRoom/index.html">ESCAPE <br>STUDIOS </a></p>
+                <p class="gameName"><a href="/EscapeRoom/index.html">ESCAPE <br>STUDIOS </a></p>
             </div>
             <div class="nav-btn-group pc">
                 <ul>
