--- a/EscapeRoom/ES-theme-bomb.html
+++ b/EscapeRoom/ES-theme-bomb.html
@@ -76,6 +76,10 @@
             margin: 0;
         }
 
+        .ham{
+            display:none;
+        }
+
         .banner {
             width: 100%;
             height: 981px;
@@ -396,6 +400,7 @@
             }
 
             .ham {
+                display:block;
                 width: 40px;
                 height: 40px;
                 position: relative;
@@ -732,7 +737,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="logo col-lg-4 d-flex align-items-center justify-content-center">
-                            <img src="../EscapeRoom/test/img/logo-white.png" alt="">
+                            <img wight="45px" height="45px" src="../EscapeRoom/test/img/logo-white.png" alt="">
                             <p style="font-size: 24px; margin:0 16px;">許多門</p>
                             <div class="d-flex" style="flex-direction: column;font-size: 6px;">
                                 <p style="letter-spacing:1.2px;">ESCAPE</p>
