--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -50,13 +50,31 @@
             background-repeat: no-repeat;
         }
 
-        .back {
+        .back1 {
             -ms-transform: rotateY(180deg);
             -o-transform: rotateY(180deg);
             -moz-transform: rotateY(180deg);
             -webkit-transform: rotateY(180deg);
             transform: rotateY(180deg);
-            background-image: url(img/back.png);
+            background-image: url('img/back1.png');
+            background-repeat: no-repeat;
+        }
+        .back2 {
+            -ms-transform: rotateY(180deg);
+            -o-transform: rotateY(180deg);
+            -moz-transform: rotateY(180deg);
+            -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg);
+            background-image: url('img/back2.png');
+            background-repeat: no-repeat;
+        }
+        .back3 {
+            -ms-transform: rotateY(180deg);
+            -o-transform: rotateY(180deg);
+            -moz-transform: rotateY(180deg);
+            -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg);
+            background-image: url('img/back3.png');
             background-repeat: no-repeat;
         }
 
@@ -237,55 +255,55 @@
                 <div class="col-lg-4 col-12 d-flex justify-content-center">
                     <div class="card_box">
                         <div class="card front"></div>
-                        <div class="card back"></div>
+                        <div class="card back3"></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex justify-content-center">
                     <div class="card_box">
                         <div class="card front"></div>
-                        <div class="card back"></div>
+                        <div class="card back2"></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex justify-content-center">
                     <div class="card_box">
                         <div class="card front"></div>
-                        <div class="card back"></div>
+                        <div class="card back1"></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex justify-content-center">
                     <div class="card_box">
                         <div class="card front"></div>
-                        <div class="card back"></div>
+                        <div class="card back1"></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex justify-content-center">
                     <div class="card_box">
                         <div class="card front"></div>
-                        <div class="card back"></div>
+                        <div class="card back3"></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex justify-content-center">
                     <div class="card_box">
                         <div class="card front"></div>
-                        <div class="card back"></div>
+                        <div class="card back2"></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex justify-content-center">
                     <div class="card_box">
                         <div class="card front"></div>
-                        <div class="card back"></div>
+                        <div class="card back2"></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex justify-content-center">
                     <div class="card_box">
                         <div class="card front"></div>
-                        <div class="card back"></div>
+                        <div class="card back1"></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex justify-content-center">
                     <div class="card_box">
                         <div class="card front"></div>
-                        <div class="card back"></div>
+                        <div class="card back3"></div>
                     </div>
                 </div>
 
