--- a/EscapeRoom/ES-theme-bomb.html
+++ b/EscapeRoom/ES-theme-bomb.html
@@ -76,8 +76,8 @@
             margin: 0;
         }
 
-        .ham{
-            display:none;
+        .ham {
+            display: none;
         }
 
         .banner {
@@ -368,7 +368,7 @@
             position: fixed;
             right: 61px;
             bottom: 61px;
-            z-index:999;
+            z-index: 999;
         }
 
         @media(max-width:1420px) {
@@ -400,7 +400,7 @@
             }
 
             .ham {
-                display:block;
+                display: block;
                 width: 40px;
                 height: 40px;
                 position: relative;
@@ -431,7 +431,7 @@
                 transform: translateX(-100%);
             }
 
-            .banner{
+            .banner {
                 background-image: url(../EscapeRoom/test/img/theme-banner-phone.png);
             }
 
@@ -512,10 +512,7 @@
             <div class="navLogo lg-4 d-flex align-items-center justify-content-center">
                 <img width="45px" height="45px" src="../EscapeRoom/test/img/logo-white.png" alt="">
                 <p class="logoName"><a href="/EscapeRoom/index.html">許多門</a></p>
-                <a href="/EscapeRoom/index.html">
-                    <p style="letter-spacing:1.7px;">ESCAPE</p>
-                    <p>STUDIOS</p>
-                </a>
+                <p class="gameName"><a href="/EscapeRoom/index.html">ESCAPE <br>STUDIOS </a></p>
             </div>
             <div class="nav-btn-group pc">
                 <ul>
@@ -666,8 +663,8 @@
                 <div class="container-fluid" style=" text-align: center;">
                     <div class="row">
                         <img src="../EscapeRoom/test/img/fire-back.png" alt="" width="100%">
-                        <img style="z-index:99; position: absolute; top:0;" src="../EscapeRoom/test/img/fire-front.png" alt=""
-                            width="100%">
+                        <img style="z-index:99; position: absolute; top:0;" src="../EscapeRoom/test/img/fire-front.png"
+                            alt="" width="100%">
                     </div>
                 </div>
                 <div class="container"
@@ -728,7 +725,6 @@
                 </div>
             </div>
         </div>
-        </div>
     </section>
 
     <footer class="container-fluid">
@@ -750,7 +746,8 @@
                             <p>台中市西區公益路155巷9號2樓（公益路勤美誠品斜對面）</p>
                         </div>
                         <div class="col-lg-1 col-3 d-flex align-items-center justify-content-center">
-                            <a href="https://www.facebook.com/TCDOORSSS"><img src="../EscapeRoom/test/img/fb_b.png" alt=""></a>
+                            <a href="https://www.facebook.com/TCDOORSSS"><img src="../EscapeRoom/test/img/fb_b.png"
+                                    alt=""></a>
                         </div>
                     </div>
                 </div>
