--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -45,8 +45,40 @@
             cursor: pointer;
         }
 
-        .front {
-            background-image: url(img/front.png);
+        .front1 {
+            background-image: url(img/front1.png);
+            background-repeat: no-repeat;
+        }
+        .front2 {
+            background-image: url(img/front2.png);
+            background-repeat: no-repeat;
+        }
+        .front3 {
+            background-image: url(img/front3.png);
+            background-repeat: no-repeat;
+        }
+        .front4 {
+            background-image: url(img/front4.png);
+            background-repeat: no-repeat;
+        }
+        .front5 {
+            background-image: url(img/front5.png);
+            background-repeat: no-repeat;
+        }
+        .front6 {
+            background-image: url(img/front6.png);
+            background-repeat: no-repeat;
+        }
+        .front7 {
+            background-image: url(img/front7.png);
+            background-repeat: no-repeat;
+        }
+        .front8 {
+            background-image: url(img/front8.png);
+            background-repeat: no-repeat;
+        }
+        .front9 {
+            background-image: url(img/front9.png);
             background-repeat: no-repeat;
         }
 
@@ -254,56 +286,56 @@
             <div class="row">
                 <div class="col-lg-4 col-12 d-flex justify-content-center">
                     <div class="card_box">
-                        <div class="card front"></div>
+                        <div class="card front1"></div>
                         <div class="card back3"></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex justify-content-center">
                     <div class="card_box">
-                        <div class="card front"></div>
+                        <div class="card front2"></div>
                         <div class="card back2"></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex justify-content-center">
                     <div class="card_box">
-                        <div class="card front"></div>
+                        <div class="card front3"></div>
                         <div class="card back1"></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex justify-content-center">
                     <div class="card_box">
-                        <div class="card front"></div>
-                        <div class="card back1"></div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-12 d-flex justify-content-center">
-                    <div class="card_box">
-                        <div class="card front"></div>
+                        <div class="card front4"></div>
                         <div class="card back3"></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex justify-content-center">
                     <div class="card_box">
-                        <div class="card front"></div>
+                        <div class="card front5"></div>
                         <div class="card back2"></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex justify-content-center">
                     <div class="card_box">
-                        <div class="card front"></div>
-                        <div class="card back2"></div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-12 d-flex justify-content-center">
-                    <div class="card_box">
-                        <div class="card front"></div>
+                        <div class="card front6"></div>
                         <div class="card back1"></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex justify-content-center">
                     <div class="card_box">
-                        <div class="card front"></div>
+                        <div class="card front7"></div>
                         <div class="card back3"></div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-12 d-flex justify-content-center">
+                    <div class="card_box">
+                        <div class="card front8"></div>
+                        <div class="card back2"></div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-12 d-flex justify-content-center">
+                    <div class="card_box">
+                        <div class="card front9"></div>
+                        <div class="card back1"></div>
                     </div>
                 </div>
 
