--- a/EscapeRoom/ES-aboutES.html
+++ b/EscapeRoom/ES-aboutES.html
@@ -69,7 +69,7 @@
         .borderA:before {
             content: '';
             position: absolute;
-            height: 52%;
+            height: 37%;
             width: 5px;
             background: linear-gradient(#21210C 0%, #B0B63F 100%);
             bottom: 0%;
@@ -84,14 +84,14 @@
             background: linear-gradient(#B0B63F 0%, #21210C 100%);
             transform: rotate(90deg);
             bottom: -26%;
-            right: 19.6%
+            right: 18.4%
         }
 
 
         .bl:before {
             content: '';
             position: absolute;
-            height: 52%;
+            height: 32%;
             width: 5px;
             left: 0.5%;
             top: 1%;
@@ -103,7 +103,7 @@
             position: absolute;
             height: 52%;
             width: 5px;
-            left: 20%;
+            left: 19%;
             top: -25%;
             background: linear-gradient(#21210C 0%, #B0B63F 100%);
             transform: rotate(90deg);
@@ -339,7 +339,7 @@
                     </div>
                     <h2>藉著團團隊合作、推理解謎、冒險實做等方式</h2>
                     <p class="LH-48">
-                        挑戰者會通過許多關卡與困難，解開寶箱啟動機關，就像親自扮演電影主角一樣在各種不同情境中冒險前進，在一個小時的緊張挑戰後，
+                        挑戰者會通過許多困難關卡，解開寶箱啟動機關，就像親自扮演電影主角一樣在各種不同情境中冒險前進，在一個小時的緊張挑戰後，
                         不管是成功失敗，都會留下難忘的經驗與回憶！</p>
                 </div>
             </div>
