--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -418,7 +418,7 @@
     <div style="height: 100%;" class="pc">
         <nav id="navbar" class="nav d-flex justify-content-between" style="position: fixed; top:0; left:0; z-index:9">
             <div class="navLogo col-lg-4 d-flex align-items-center justify-content-center">
-                <img width="45px" height="45px" src="/EscapeRoom/test/img/logo-white.png" alt="">
+                <img width="45px" height="45px" src="img/logo-white.png" alt="">
                 <a href="/EscapeRoom/index.html">
                     <p style="font-size: 24px; margin:0 16px;">許多門</p>
                 </a>
@@ -579,7 +579,7 @@
                             <div class="col-lg-3">
                                 <img src="../EscapeRoom/test/img/key.png" alt="">
                                 <div style="color: white; font-size: 16px; line-height: 36px;">
-                                    <p style="color: #549FB6;font-size: 24px; font-weight:bold; line-height:48px;">
+                                    <p style="color: #549FB6;font-size: 36px; font-weight:bold; line-height:48px;">
                                         特別提醒</p>
                                     <p>要揭穿御醫的詭計，必須了解各種藥理針灸醫術，記憶與理解的情報很多，也可能有陰森血腥的場景。</p>
                                 </div>
@@ -596,7 +596,7 @@
                                     <div style=" text-align: center;">
                                         <img src="../EscapeRoom/test/img/people_d.png" alt="">
                                         <div
-                                            style="color: #549FB6; font-size: 24px; font-weight:bold; margin-bottom: 20px;">
+                                            style="color: #549FB6; font-size: 36px; font-weight:bold; margin-bottom: 20px;">
                                             挑戰人數</div>
                                         <p style="color: white;font-size: 16px;">4~8人</p>
                                     </div>
@@ -605,7 +605,7 @@
                                     <div style=" text-align: center;">
                                         <img src="../EscapeRoom/test/img/time_d.png" alt="">
                                         <div
-                                            style="color: #549FB6;font-size: 24px; font-weight:bold; margin-bottom: 20px;">
+                                            style="color: #549FB6;font-size: 36px; font-weight:bold; margin-bottom: 20px;">
                                             挑戰時間
                                         </div>
                                         <p style="color: white;font-size: 16px;">60分鐘</p>
@@ -615,7 +615,7 @@
                                     <div style=" text-align: center;">
                                         <img src="../EscapeRoom/test/img/key_d.png" alt="">
                                         <div
-                                            style="color: #549FB6;font-size: 24px; font-weight:bold; line-height:48px;">
+                                            style="color: #549FB6;font-size: 36px; font-weight:bold; line-height:48px;">
                                             場次時間
                                         </div>
                                         <p style="color: white;font-size: 16px; line-height: 36px;">11:20 / 12:40 /
