--- a/EscapeRoom/ES-theme-bomb.html
+++ b/EscapeRoom/ES-theme-bomb.html
@@ -53,7 +53,7 @@
             font-size: 24px;
             margin-left: 30px;
             line-height: 80px;
-
+            font-weight:bold;
         }
 
         .nav-btn-group ul {
@@ -512,7 +512,10 @@
             <div class="navLogo lg-4 d-flex align-items-center justify-content-center">
                 <img width="45px" height="45px" src="../EscapeRoom/test/img/logo-white.png" alt="">
                 <p class="logoName"><a href="/EscapeRoom/index.html">許多門</a></p>
-                <p class="gameName"><a href="/EscapeRoom/index.html">ESCAPE <br>STUDIOS </a></p>
+                <a href="/EscapeRoom/index.html">
+                    <pu>ESCAPE</pu>
+                    <p>STUDIOS</p>
+                </a>
             </div>
             <div class="nav-btn-group pc">
                 <ul>
@@ -605,7 +608,7 @@
                     <p>面對急遽升高的國際關係，</p>
                     <p>首當其衝的便是這些世界強國，</p>
                     <p>將在2020年舉辦東京奧運的日本，</p>
-                    <p class="text-s-16" style="color:white; font-size:24px; font-weight:bold; padding:0 ;margin:0">
+                    <p class="text-s-16" style="color:white; font-size:24px; line-height:48px; font-weight:bold; padding:0 ;margin:0">
                         嚴正戒備著<span style="color:#A74141">恐怖分子</span>的干擾。</p>
                 </div>
             </div>
@@ -618,7 +621,7 @@
                         src="../EscapeRoom/test/img/soldiers.png" alt="">
                     <div class="col-lg-3 d-flex"
                         style="color: white; font-size:16px; line-height: 36px; text-align: center; flex-direction: column; padding-bottom: 160px; padding-right:25px">
-                        <p style="font-size:24px; color:#A74141;">『反恐特搜-爆彈拆除班』，</p>
+                        <p style="font-size:24px; color:#A74141; line-height:48px; font-weight:bold;">『反恐特搜-爆彈拆除班』，</p>
                         <p>就是因應緊急狀況成立的特別部隊，</p>
                         <p>靠著精良高科技的設備與特別徵召的優秀隊員，</p>
                         <p>『爆彈拆除班』解決了許多緊急的攻擊事件！</p>
@@ -631,7 +634,7 @@
                 <img class="col-12" data-aos="fade-left" src="../EscapeRoom/test/img/soldiers3.png" alt="">
                 <div class="text col-12 d-flex"
                     style="color: white; font-size:16px; line-height: 36px; text-align: center; flex-direction: column;">
-                    <p style=" color:#A74141;">『反恐特搜-爆彈拆除班』，</p>
+                    <p class="text-s-16" style="color:#A74141;">『反恐特搜-爆彈拆除班』，</p>
                     <p>就是因應緊急狀況成立的特別部隊，</p>
                     <p>靠著精良高科技的設備與特別徵召的優秀隊員，</p>
                     <p>『爆彈拆除班』解決了許多緊急的攻擊事件！</p>
@@ -656,7 +659,7 @@
                     <p>『爆彈拆除班』要面對看起來『束手無策』的困境！</p>
                     <p>剩下60分鐘，你們可以順利解除所有的危機嗎？！</p>
                     <p>要成為『爆彈拆除班』的一員，</p>
-                    <p class="text-s-16" style="color: #A74141; font-size: 24px; line-height:48px;">你必須要不成功便成仁的決心！</p>
+                    <p class="text-s-16" style="color: #A74141; font-size: 24px; line-height:48px; font-weight:bold;">你必須要不成功便成仁的決心！</p>
                 </div>
             </div>
             <div class="fire" style="margin-top:75px; position:relative">
@@ -680,7 +683,7 @@
         <section class="p-75 container" style="padding:200px 0;">
             <div class="row" style="flex-direction: column; align-items:center;">
                 <img src="../EscapeRoom/test/img/key.png" alt="">
-                <p style="color: #E55A5A;font-size: 24px; font-weight:bold; line-height:48px;">特別提醒</p>
+                <p style="color: #E55A5A;font-size: 36px; font-weight:bold; line-height:48px;">特別提醒</p>
                 <p style="color: white; font-size: 16px; line-height: 36px;">眼明手快、動作穩定、頭腦清楚才有成功機會，</p>
                 <p style="color: white; font-size: 16px; line-height: 36px;">沒有準備好之前請勿輕易嘗試！</p>
             </div>
@@ -695,7 +698,7 @@
                         <div style=" text-align: center;">
                             <img src="../EscapeRoom/test/img/white-man.png" alt="">
                             <div class="m-b-30"
-                                style="color: #E55A5A; font-size: 24px; font-weight:bold; margin-bottom: 20px;">挑戰人數
+                                style="color: #E55A5A; font-size: 36px; font-weight:bold; margin-bottom: 20px;">挑戰人數
                             </div>
                             <p style="color: white;font-size: 16px;">4~8人</p>
                         </div>
@@ -704,7 +707,7 @@
                         <div style=" text-align: center;">
                             <img src="../EscapeRoom/test/img/clock.png" alt="">
                             <div class="m-b-30"
-                                style="color: #E55A5A;font-size: 24px; font-weight:bold; margin-bottom: 20px;">挑戰時間
+                                style="color: #E55A5A;font-size: 36px; font-weight:bold; margin-bottom: 20px;">挑戰時間
                             </div>
                             <p style="color: white;font-size: 16px;">60分鐘</p>
                         </div>
@@ -713,7 +716,7 @@
                         <div style="text-align: center;">
                             <img src="../EscapeRoom/test/img/key.png" alt="">
                             <div class="m-b-30"
-                                style="color: #E55A5A;font-size: 24px; font-weight:bold; line-height:48px;">場次時間</div>
+                                style="color: #E55A5A;font-size: 36px; font-weight:bold; line-height:48px;">場次時間</div>
                             <p style="color: white;font-size: 16px; line-height: 36px;">11:00 / 12:20 / 13:50 / 15:20 /
                             </p>
                             <p style="color: white;font-size: 16px; line-height: 36px;">16:50 / 18:10 / 19:30</p>
@@ -736,7 +739,7 @@
                             <img wight="45px" height="45px" src="../EscapeRoom/test/img/logo-white.png" alt="">
                             <p style="font-size: 24px; margin:0 16px;">許多門</p>
                             <div class="d-flex" style="flex-direction: column;font-size: 6px;">
-                                <p style="letter-spacing:1.2px;">ESCAPE</p>
+                                <p>ESCAPE</p>
                                 <p>STUDIOS</p>
                             </div>
                         </div>
