--- a/EscapeRoom/ES-theme-bomb.html
+++ b/EscapeRoom/ES-theme-bomb.html
@@ -439,6 +439,7 @@
                 color: #CECAB8;
                 font-size: 48px;
                 line-height: 60px;
+                text-shadow:10px 10px 25px #5E5E5D;
                 position: absolute;
                 left: 23%;
                 top: 50%;
@@ -482,7 +483,8 @@
                 padding: 0 !important;
             }
 
-            .m-b-30 {
+            .titletext {
+                font-size:24px !important;
                 margin-bottom: 30px !important;
             }
 
@@ -608,7 +610,7 @@
                     <p>面對急遽升高的國際關係，</p>
                     <p>首當其衝的便是這些世界強國，</p>
                     <p>將在2020年舉辦東京奧運的日本，</p>
-                    <p class="text-s-16" style="color:white; font-size:24px; line-height:48px; font-weight:bold; padding:0 ;margin:0">
+                    <p class="text-s-16" style="color:white; font-size:24px; line-height:48px; font-weight:bold;">
                         嚴正戒備著<span style="color:#A74141">恐怖分子</span>的干擾。</p>
                 </div>
             </div>
@@ -683,7 +685,7 @@
         <section class="p-75 container" style="padding:200px 0;">
             <div class="row" style="flex-direction: column; align-items:center;">
                 <img src="../EscapeRoom/test/img/key.png" alt="">
-                <p style="color: #E55A5A;font-size: 36px; font-weight:bold; line-height:48px;">特別提醒</p>
+                <p class="titletext" style="color: #E55A5A;font-size: 36px; margin-bottom:20px;">特別提醒</p>
                 <p style="color: white; font-size: 16px; line-height: 36px;">眼明手快、動作穩定、頭腦清楚才有成功機會，</p>
                 <p style="color: white; font-size: 16px; line-height: 36px;">沒有準備好之前請勿輕易嘗試！</p>
             </div>
@@ -697,8 +699,8 @@
                     <div class="m-b-50 col-lg-4">
                         <div style=" text-align: center;">
                             <img src="../EscapeRoom/test/img/white-man.png" alt="">
-                            <div class="m-b-30"
-                                style="color: #E55A5A; font-size: 36px; font-weight:bold; margin-bottom: 20px;">挑戰人數
+                            <div class="titletext"
+                                style="color: #E55A5A; font-size: 36px; margin-bottom: 20px;">挑戰人數
                             </div>
                             <p style="color: white;font-size: 16px;">4~8人</p>
                         </div>
@@ -706,8 +708,8 @@
                     <div class="m-b-50 col-lg-4">
                         <div style=" text-align: center;">
                             <img src="../EscapeRoom/test/img/clock.png" alt="">
-                            <div class="m-b-30"
-                                style="color: #E55A5A;font-size: 36px; font-weight:bold; margin-bottom: 20px;">挑戰時間
+                            <div class="titletext"
+                                style="color: #E55A5A;font-size: 36px; margin-bottom: 20px;">挑戰時間
                             </div>
                             <p style="color: white;font-size: 16px;">60分鐘</p>
                         </div>
@@ -715,8 +717,8 @@
                     <div class="col-lg-4">
                         <div style="text-align: center;">
                             <img src="../EscapeRoom/test/img/key.png" alt="">
-                            <div class="m-b-30"
-                                style="color: #E55A5A;font-size: 36px; font-weight:bold; line-height:48px;">場次時間</div>
+                            <div class="titletext"
+                                style="color: #E55A5A;font-size: 36px; margin-bottom: 20px;">場次時間</div>
                             <p style="color: white;font-size: 16px; line-height: 36px;">11:00 / 12:20 / 13:50 / 15:20 /
                             </p>
                             <p style="color: white;font-size: 16px; line-height: 36px;">16:50 / 18:10 / 19:30</p>
