--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     <title>Document</title>
     <style>
+        html,
+        body {
+            scroll-behavior: smooth;
+        }
+
         /* 電腦 */
         .nav {
             width: 100%;
@@ -142,27 +147,27 @@
         }
 
         .themeBtn {
-                width: 200px;
-                text-align: center;
-                color: white;
-                margin-top: 70px;
-                border: 1px solid white;
-                font-size: 36px;
-                transition: .5s;
-            }
+            width: 200px;
+            text-align: center;
+            color: white;
+            margin-top: 70px;
+            border: 1px solid white;
+            font-size: 36px;
+            transition: .5s;
+        }
 
-            .themeBtn:hover {
-                background: rgba(255, 255, 255, 0.85);
-                color: black;
-            }
+        .themeBtn:hover {
+            background: rgba(255, 255, 255, 0.85);
+            color: black;
+        }
 
-            .themeBtn:hover.themeBtn a {
-                color: black;
-            }
+        .themeBtn:hover.themeBtn a {
+            color: black;
+        }
 
-            .themeBtn a {
-                color: white;
-            }
+        .themeBtn a {
+            color: white;
+        }
 
         .information {
             width: 100%;
@@ -252,6 +257,10 @@
         .gameName {
             font-size: 10.73px;
             margin: 0;
+        }
+
+        .ham {
+            display: none;
         }
 
         .info {
@@ -417,20 +426,16 @@
     <!-- 電腦 -->
     <div style="height: 100%;" class="pc">
         <nav id="navbar" class="nav d-flex justify-content-between" style="position: fixed; top:0; left:0; z-index:9">
-            <div class="navLogo col-lg-4 d-flex align-items-center justify-content-center">
-                <img width="45px" height="45px" src="img/logo-white.png" alt="">
+            <div class="navLogo lg-4 d-flex align-items-center justify-content-center">
+                <img width="45px" height="45px" src="../EscapeRoom/test/img/logo-white.png" alt="">
+                <p class="logoName"><a href="/EscapeRoom/index.html">許多門</a></p>
                 <a href="/EscapeRoom/index.html">
-                    <p style="font-size: 24px; margin:0 16px;">許多門</p>
+                    <pu>ESCAPE</pu>
+                    <p>STUDIOS</p>
                 </a>
-                <div class="d-flex" style="flex-direction: column;font-size: 6px;">
-                    <a href="/EscapeRoom/index.html">
-                        <p style="letter-spacing:1.2px;">ESCAPE</p>
-                        <p>STUDIOS</p>
-                    </a>
-                </div>
             </div>
             <div class="nav-btn-group pc">
-                <ul class="d-flex">
+                <ul>
                     <li><a href="/EscapeRoom/ES-aboutEscape.html">關於密室逃脫</a></li>
                     <li><a href="/EscapeRoom/ES-news.html">最新消息</a></li>
                     <li><a href="/EscapeRoom/ES-aboutES.html">關於許多門</a></li>
@@ -438,7 +443,15 @@
                     <li><a href="/EscapeRoom/ES-fee.html">收費方式</a></li>
                 </ul>
             </div>
-
+            <div class="ham mobile">
+                <ul>
+                    <li><a href="/EscapeRoom/ES-aboutEscape.html">關於密室逃脫</a></li>
+                    <li><a href="/EscapeRoom/ES-news.html">最新消息</a></li>
+                    <li><a href="/EscapeRoom/ES-aboutES.html">關於許多門</a></li>
+                    <li><a href="/EscapeRoom/ES-theme.html">主題介紹</a></li>
+                    <li><a href="/EscapeRoom/ES-fee.html">收費方式</a></li>
+                </ul>
+            </div>
         </nav>
 
         <div class="slides-container">
@@ -579,7 +592,7 @@
                             <div class="col-lg-3">
                                 <img src="../EscapeRoom/test/img/key.png" alt="">
                                 <div style="color: white; font-size: 16px; line-height: 36px;">
-                                    <p style="color: #549FB6;font-size: 36px; font-weight:bold; line-height:48px;">
+                                    <p style="color: #549FB6;font-size: 36px; line-height:48px;">
                                         特別提醒</p>
                                     <p>要揭穿御醫的詭計，必須了解各種藥理針灸醫術，記憶與理解的情報很多，也可能有陰森血腥的場景。</p>
                                 </div>
@@ -596,7 +609,7 @@
                                     <div style=" text-align: center;">
                                         <img src="../EscapeRoom/test/img/people_d.png" alt="">
                                         <div
-                                            style="color: #549FB6; font-size: 36px; font-weight:bold; margin-bottom: 20px;">
+                                            style="color: #549FB6; font-size: 36px; margin-bottom: 20px;">
                                             挑戰人數</div>
                                         <p style="color: white;font-size: 16px;">4~8人</p>
                                     </div>
@@ -605,7 +618,7 @@
                                     <div style=" text-align: center;">
                                         <img src="../EscapeRoom/test/img/time_d.png" alt="">
                                         <div
-                                            style="color: #549FB6;font-size: 36px; font-weight:bold; margin-bottom: 20px;">
+                                            style="color: #549FB6;font-size: 36px; margin-bottom: 20px;">
                                             挑戰時間
                                         </div>
                                         <p style="color: white;font-size: 16px;">60分鐘</p>
@@ -615,7 +628,7 @@
                                     <div style=" text-align: center;">
                                         <img src="../EscapeRoom/test/img/key_d.png" alt="">
                                         <div
-                                            style="color: #549FB6;font-size: 36px; font-weight:bold; line-height:48px;">
+                                            style="color: #549FB6;font-size: 36px; line-height:48px; margin-bottom: 20px;">
                                             場次時間
                                         </div>
                                         <p style="color: white;font-size: 16px; line-height: 36px;">11:20 / 12:40 /
@@ -636,29 +649,34 @@
             </div>
         </div>
 
-        <footer class="container-fluid" style="padding:0; position:relative; z-index:9;">
-            <div class="information d-flex align-items-center justify-content-center">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-4 d-flex align-items-center justify-content-center">
-                            <img width="45px" height="45px" src="img/logo-white.png" alt="">
-                            <p style="font-size: 24px; margin:0 16px;">許多門</p>
-                            <div class="d-flex" style="flex-direction: column;font-size: 6px;">
-                                <p style="letter-spacing:1.2px;">ESCAPE</p>
-                                <p>STUDIOS</p>
+        <footer class="container-fluid">
+            <div class="row">
+                <div class="information d-flex align-items-center">
+                    <div class="container">
+                        <div class="row">
+                            <div class="logo col-lg-4 d-flex align-items-center justify-content-center">
+                                <img wight="45px" height="45px" src="../EscapeRoom/test/img/logo-white.png" alt="">
+                                <p style="font-size: 24px; margin:0 16px;">許多門</p>
+                                <div class="d-flex" style="flex-direction: column;font-size: 6px;">
+                                    <p>ESCAPE</p>
+                                    <p>STUDIOS</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-lg-7">
-                            <p style="font-size: 16px; line-height:36px;">台中市西區公益路155巷9號2樓（公益路勤美誠品斜對面）</p>
-                            <p style="font-size: 16px;">TEL 04-23020080 / 0971283166</p>
-                        </div>
-                        <div class="col-lg-1">
-                            <a href="https://www.facebook.com/TCDOORSSS"><img src="img/fb_d.png" alt=""></a>
+                            <div class="col-lg-7 col-9 d-flex align-items-left justify-content-center"
+                                style="font-size: 16px; line-height:36px; flex-direction: column;">
+                                <p>TEL 04-23020080 / 0971283166</p>
+                                <p>台中市西區公益路155巷9號2樓（公益路勤美誠品斜對面）</p>
+                            </div>
+                            <div class="col-lg-1 col-3 d-flex align-items-center justify-content-center">
+                                <a href="https://www.facebook.com/TCDOORSSS"><img src="../EscapeRoom/test/img/fb_b.png"
+                                        alt=""></a>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="copyright">Copyright &copy; 許多門 Inc. All rights reserved</div>
+                <div class="gotop"><a href="#navbar"><img src="../EscapeRoom/test/img/gotop.png" alt=""></a></div>
             </div>
-            <div class="copyright">Copyright &copy; 許多門 Inc. All rights reserved</div>
         </footer>
     </div>
 
